--- a/.codemine.yml
+++ b/.codemine.yml
@@ -1,14 +1,30 @@
+
+#test
 version: 1.0
 stages:
-  stage2:
-    jobs:
-    - - antgithub1
-
+  - - stage1
 jobs:
-  antgithub1:
+  checkout:
     description: source cloning job
-    type: approval-wait
+    type: source-checkout
     timeout: 30
+    stage: stage1
     parameters:
-      approvers:
-      - jeevanantham.p+cmdev_15@zohotest.com
+      branch: master
+  build:
+    description: build project using maven
+    type: maven
+    timeout: 30
+    stage: stage1
+    after:
+    - checkout
+    parameters:
+      requiredArtifacts:
+      - checkout
+      image: maven:latest
+      scripts:
+      - mvn clean package
+      captureArtifacts:
+      - '**/build/**/*.jar'
+      captureUnitTests: 'true'
+      testResultFiles: '**/TEST-*.xml'
